--- a/gatewayService-dev.yml
+++ b/gatewayService-dev.yml
@@ -11,7 +11,7 @@ eureka:
     preferIpAddress: true
 spring:
   application:
-    name: gateway-service
+    name: gatewaySservice
   cloud:
     gateway:
       mvc:
